cert-manager/test-nginx/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-test-service 
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    name: nginx-test-backend
