cert-manager/test-nginx/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-test-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: true
spec:
  tls:
    - secretName: nginx-test-ingress-james-elgar-com-tls
      hosts:
        - nginx.jameselgar.com
  rules:
  - host: nginx.jameselgar.com
    http:
      paths:
        - path: /
          backend:
            serviceName: nginx-test-service 
            servicePort: 80
